--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>ForeMosteRhino</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi culpa libero quae nemo laudantium porro reiciendis quibusdam placeat dignissimos fuga, dolores magnam omnis voluptatum voluptate nihil eaque atque iste sunt?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi culpa libero quae nemo laudantium porro reiciendis quibusdam placeat dignissimos fuga, dolores magnam omnis voluptatum voluptate nihil eaque atque iste sunt?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi culpa libero quae nemo laudantium porro reiciendis quibusdam placeat dignissimos fuga, dolores magnam omnis voluptatum voluptate nihil eaque atque iste sunt?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi culpa libero quae nemo laudantium porro reiciendis quibusdam placeat dignissimos fuga, dolores magnam omnis voluptatum voluptate nihil eaque atque iste sunt?</p>
+    <header>
+    <nav>
+        <ul>
+            <li><a href="#about-me">About me</a></li>
+        </ul>
+    </nav>
+    </header>
+    <main>
+        <section id="about-me">
+            <h2 id="about-me-title">About me & My skills</h2>
+            <p id="about-me-paragraph">As an aspiring front-end developer I'm familiar with HTML, CSS, and Js. I have coded many diverse projects,
+            Each one with its own specific problems and solutions. Be it trying to animate something, decreasing loading times,
+            rewriting the code to make it more efficient, And making sure it worked on all devices. Be it a mobile phone, a laptop or pc.</p>
+        </section>
+    </main>
 </body>
 </html>
