--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <nav>
         <ul>
             <li><a href="#about-me">About me</a></li>
+            <li><a href="#projects">My projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -19,6 +21,23 @@
             <p id="about-me-paragraph">As an aspiring front-end developer I'm familiar with HTML, CSS, and Js. I have coded many diverse projects,
             Each one with its own specific problems and solutions. Be it trying to animate something, decreasing loading times,
             rewriting the code to make it more efficient, And making sure it worked on all devices. Be it a mobile phone, a laptop or pc.</p>
+        </section>
+        
+        <section id="projects">
+            <h2 id="projects-title">The projects i've built so far</h2>
+        </section>
+        <section id="contact">
+            <h2 id="contact-me-title">Contact me</h2>
+            <ul>
+             <li>
+            <strong class="strong-contact">Email:</strong>
+            <a class="contact-info" href="mailto:foremosterhino99@gmail.com">foremosterh*****@gmail.com</a>
+              </li>
+                <li>
+            <strong class="strong-contact">Phone:</strong>
+            <a class="contact-info" href="tel:9720000000000">972-000-000-0000</a>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
