--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
              <li>
             <strong class="strong-contact">Email:</strong>
-            <a class="contact-info" href="mailto:foremosterhino99@gmail.com">foremosterh*****@gmail.com</a>
+            <a class="contact-info" href="mailto:foremosterhino99@gmail.com">foremosterhino99@gmail.com</a>
               </li>
                 <li>
             <strong class="strong-contact">Phone:</strong>
