--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <main>
         <section id="about-me">
             <h2 id="about-me-title">About me & My skills</h2>
-            <p id="about-me-paragraph">As an aspiring front-end developer I'm familiar with HTML, CSS, and Js. I have coded many diverse projects,
-            Each one with its own specific problems and solutions. Be it trying to animate something, decreasing loading times,
-            rewriting the code to make it more efficient, And making sure it worked on all devices. Be it a mobile phone, a laptop or pc.</p>
+            <p class="paragraph-text" id="about-me-paragraph-1">FILLER FILLER FILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLER</p>
+            <p class="paragraph-text" id="about-me-paragraph-2">FILLER FILLER FILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLER</p>
         </section>
         
         <section id="projects">
