--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
     <main>
         <section id="about-me">
 
-            <p class="paragraph-text" id="about-me-paragraph-1">FILLER FILLER FILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLER</p>
-            <p class="paragraph-text" id="about-me-paragraph-2">FILLER FILLER FILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLERFILLER FILLER</p>
+            <p class="paragraph-text" id="about-me-paragraph-1">
+                My goal is to become a full stack developer,
+                and to achieve that I started learning front-end development.
+                I'm familiar with HTML, CSS, And JS. </p>
+            <p class="paragraph-text" id="about-me-paragraph-2">
+                I have built many projects,
+                each with their own sets of problems & solutions.
+                Be it a minor error due to conflict with the code
+                A featuer not working as intended, Or just somehting
+                difficult to implement.</p>
         </section>
         
         <section id="projects">
