--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
             <p class="paragraph-text" id="about-me-paragraph-1">
                 My goal is to become a full stack developer,
                 and to achieve that I started learning front-end development.
-                I'm familiar with HTML, CSS, And JS. </p>
+                It was hard at first, I didn't know where to start, With people
+                constantly saying do this or that. 
+                After a while I found a place where I could learn
+                front-end development. And after countless Hours
+                of effort pored into studying, I became familiar with
+                HTML, CSS, And Java script.</p>
             <p class="paragraph-text" id="about-me-paragraph-2">
-                I have built many projects,
-                each with their own sets of problems & solutions.
-                Be it a minor error due to conflict with the code
-                A featuer not working as intended, Or just somehting
-                difficult to implement.</p>
+                Along my journey I have built many projects,
+                Each with their own set of problems as well as solutions.
+                be it a bug due to conflict in the code, A feature not working
+                as intended, Or not working at all. Constantly trying to make
+                the written code as small as possible so that I won't have to
+                look for hours for a single typo.
+                I learned how to handle all this things, All in a matter of less then a year.
+                I'm a fast learner and if given the chance I can confidently say that
+                that I will exceed excpectations.</p>
         </section>
         
         <section id="projects">
