--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 constantly saying do this or that. 
                 After a while I found a place where I could learn
                 front-end development. And after countless Hours
-                of effort pored into studying, I became familiar with
+                of effort pored into studying, I gradually became familiar with
                 HTML, CSS, And Java script.</p>
             <p class="paragraph-text" id="about-me-paragraph-2">
                 Along my journey I have built many projects,
@@ -37,10 +37,11 @@
                 I learned how to handle all this things, All in a matter of less then a year.
                 I'm a fast learner and if given the chance I can confidently say that
                 that I will exceed excpectations.</p>
+        
         </section>
         
         <section id="projects">
-            <h2 id="projects-title">The projects i've built so far</h2>
+            <h2 id="projects-title">The projects I built so far.</h2>
         </section>
         <section id="contact">
             <h2 id="contact-me-title">Contact me</h2>
