--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
         </section>
         
         <section id="projects">
-            <h2 id="projects-title">The projects I built so far.</h2>
+            <h2 id="projects-title">Now, with that said, here are the projects I built so far.</h2>
+            <div class="project-card">
+            <h3 id="project-calculator">The calculator (HTML, CSS, JS)</h3>
+            <p>The calculator, It calculates. With the added bonus of fireworks on each button press.</p>
+                <div class="project-links">
+                    <a href="https//"></a> /* live demo link */
+                    <a href="https//"></a> /* link to the code in repository */
+                </div>
+            </div>
+            <div class="project-card">
+            <h3 id="project-calculator">Dice Game (HTML, CSS, JS)</h3>
+            <p>An interactive dice rolling-game, featuring dynamic scoring, multiple rounds, and user interaction.
+               Built to demonstrate core JavaScript DOM manipulation and game logic. </p>
+                <div class="project-links">
+                    <a href="https//"></a> /* live demo link */
+                    <a href="https//"></a> /* link to the code in repository */
+                </div>
+            </div>
         </section>
         <section id="contact">
             <h2 id="contact-me-title">Contact me</h2>
