--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         
         <section id="projects">
-            <h2 id="projects-title">Now, with that said, here are the projects I built so far.</h2>
+            <h2 id="projects-title">Now, with that said, here are the projects I built so far</h2>
             <div class="project-card">
             <h3 id="project-calculator">The calculator (HTML, CSS, JS)</h3>
             <p>The calculator, It calculates. With the added bonus of fireworks on each button press.</p>
